// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/text/demo/basic.md correctly 1`] = `
<div>
  <span
    class="ant-text"
  >
    Ant Design
  </span>
  <br />
  <span
    class="ant-text ant-text-secondary"
  >
    Ant Design
  </span>
  <br />
  <span
    class="ant-text ant-text-warning"
  >
    Ant Design
  </span>
  <br />
  <span
    class="ant-text ant-text-danger"
  >
    Ant Design
  </span>
  <br />
  <span
    class="ant-text ant-text-disabled"
  >
    Ant Design
  </span>
  <br />
  <span
    class="ant-text ant-text-mark"
  >
    Ant Design
  </span>
  <br />
  <span
    class="ant-text ant-text-underline"
  >
    Ant Design
  </span>
  <br />
  <span
    class="ant-text ant-text-delete"
  >
    Ant Design
  </span>
  <br />
  <span
    class="ant-text ant-text-bold"
  >
    Ant Design
  </span>
</div>
`;

exports[`renders ./components/text/demo/ellipsis.md correctly 1`] = `
<div
  class="ant-text ant-text-ellipsis"
>
  Ant Design, a design language for background applications, is refined by Ant UED Team. Ant Design, a design language for background applications, is refined by Ant UED Team. Ant Design, a design language for background applications, is refined by Ant UED Team. Ant Design, a design language for background applications, is refined by Ant UED Team. Ant Design, a design language for background applications, is refined by Ant UED Team. Ant Design, a design language for background applications, is refined by Ant UED Team.
</div>
`;

exports[`renders ./components/text/demo/ellipsis-debug.md correctly 1`] = `
<div>
  <div
    class="ant-slider"
  >
    <div
      class="ant-slider-rail"
    />
    <div
      class="ant-slider-track"
      style="left:0%;width:0%"
    />
    <div
      class="ant-slider-step"
    />
    <div
      aria-disabled="false"
      aria-valuemax="10"
      aria-valuemin="1"
      aria-valuenow="1"
      class="ant-slider-handle"
      role="slider"
      style="left:0%"
      tabindex="0"
    />
    <div
      class="ant-slider-mark"
    />
  </div>
  <div
    class="ant-text ant-text-ellipsis"
  >
    Ant Design, a design language for background applications, is refined by Ant UED Team. Ant Design, a design language for background applications, is refined by Ant UED Team. Ant Design, a design language for background applications, is refined by Ant UED Team. Ant Design, a design language for background applications, is refined by Ant UED Team. Ant Design, a design language for background applications, is refined by Ant UED Team.
    <button
      aria-label="copy"
      class="ant-text-copy"
      style="border:0;background:transparent;padding:0;line-height:inherit"
    >
      <i
        aria-label="icon: copy"
        class="anticon anticon-copy"
        role="button"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="copy"
          fill="currentColor"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
          />
        </svg>
      </i>
    </button>
  </div>
</div>
`;

exports[`renders ./components/text/demo/interactive.md correctly 1`] = `
<div>
  <div
    class="ant-text"
  >
    This is an editable text.
    <button
      aria-label="edit"
      class="ant-text-edit"
      style="border:0;background:transparent;padding:0;line-height:inherit"
    >
      <i
        aria-label="icon: edit"
        class="anticon anticon-edit"
        role="button"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="edit"
          fill="currentColor"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M257.7 752c2 0 4-.2 6-.5L431.9 722c2-.4 3.9-1.3 5.3-2.8l423.9-423.9a9.96 9.96 0 0 0 0-14.1L694.9 114.9c-1.9-1.9-4.4-2.9-7.1-2.9s-5.2 1-7.1 2.9L256.8 538.8c-1.5 1.5-2.4 3.3-2.8 5.3l-29.5 168.2a33.5 33.5 0 0 0 9.4 29.8c6.6 6.4 14.9 9.9 23.8 9.9zm67.4-174.4L687.8 215l73.3 73.3-362.7 362.6-88.9 15.7 15.6-89zM880 836H144c-17.7 0-32 14.3-32 32v36c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-36c0-17.7-14.3-32-32-32z"
          />
        </svg>
      </i>
    </button>
  </div>
  <div
    class="ant-text"
  >
    This is a copyable text.
    <button
      aria-label="copy"
      class="ant-text-copy"
      style="border:0;background:transparent;padding:0;line-height:inherit"
    >
      <i
        aria-label="icon: copy"
        class="anticon anticon-copy"
        role="button"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="copy"
          fill="currentColor"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
          />
        </svg>
      </i>
    </button>
  </div>
</div>
`;

exports[`renders ./components/text/demo/paragraph.md correctly 1`] = `
<div>
  <h1
    class="ant-text"
  >
    Introduction
  </h1>
  <div
    class="ant-text"
  >
    In the process of internal desktop applications development, many different design specs and implementations would be involved, which might cause designers and developers difficulties and duplication and reduce the efficiency of development.
  </div>
  <div
    class="ant-text"
  >
    After massive project practice and summaries, Ant Design, a design language for background applications, is refined by Ant UED Team, which aims to uniform the user interface specs for internal background projects, lower the unnecessary cost of design differences and implementation and liberate the resources of design and front-end development.
  </div>
  <h2
    class="ant-text"
    level="2"
  >
    Guidelines and Resources
  </h2>
  <div
    class="ant-text"
  >
    We supply a series of design principles, practical patterns and high quality design resources (Sketch and Axure), to help people create their product prototypes beautifully and efficiently.
  </div>
  <div
    class="ant-text"
  >
    <ul>
      <li>
        <a
          href="/docs/spec/proximity"
        >
          Principles
        </a>
      </li>
      <li>
        <a
          href="/docs/pattern/navigation"
        >
          Patterns
        </a>
      </li>
      <li>
        <a
          href="/docs/resource/download"
        >
          Resource Download
        </a>
      </li>
    </ul>
  </div>
</div>
`;

exports[`renders ./components/text/demo/title.md correctly 1`] = `
<div>
  <h1
    class="ant-text"
  >
    h1. Ant Design
  </h1>
  <h2
    class="ant-text"
    level="2"
  >
    h2. Ant Design
  </h2>
  <h3
    class="ant-text"
    level="3"
  >
    h3. Ant Design
  </h3>
  <h4
    class="ant-text"
    level="4"
  >
    h4. Ant Design
  </h4>
</div>
`;
